[package]
name = "node-rusty-dns"
version = "0.1.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { version = "0.10.1", features = ["napi-6", "channel-api", "promise-api"], default-features = false }
once_cell = "1.17.1"
tokio = "1.26.0"
trust-dns-resolver = "0.22.0"
