[package]
name = "node-rusty-dns"
version = "0.1.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = { version = "2.11.4", features = ["tokio_rt", "napi8"] }
napi-derive = "2.11.2"
once_cell = "1.17.1"
trust-dns-resolver = "0.22.0"

[build-dependencies]
napi-build = "2"
